Fixed CSS bug that made impossible close sidebar on mobile when metaboxes exist.

--- a/edit-post/components/meta-boxes/meta-boxes-panel/style.scss
+++ b/edit-post/components/meta-boxes/meta-boxes-panel/style.scss
@@ -6,6 +6,10 @@
 	.is-sidebar-opened & {
 		display: block;
 	}
+
+	.edit-post-meta-boxes-panel__toggle .components-panel__header {
+		position: inherit;
+	}
 }
 
 .edit-post-meta-boxes-panel__body {
